--- a/add.ejs
+++ b/add.ejs
@@ -84,7 +84,7 @@
                                     <input type="number" placeholder="Enter product CP" name="cp"><br>
                                     <label>Product Selling Price:</label>
                                     <input type="number" placeholder="Enter product SP" name="sp"><br><br>  
-                                    <button type="button" class="btn btn-success">Add</button>
+                                    <button type="submit" class="btn btn-success">Add</button>
                                 </form>
                         </div>
                     </div>
