--- a/delete.ejs
+++ b/delete.ejs
@@ -68,7 +68,7 @@
                             <form action="/deleteData" method="POST">
                                 <label>Product Id:</label>
                                 <input type="number" placeholder="Enter product Id" name="pid"><br><br>
-                                <button type="button" class="btn btn-danger">Delete</button>
+                                <button type="submit" class="btn btn-danger">Delete</button>
                             </form>
                         </div>
                     </div>
