--- a/update.ejs
+++ b/update.ejs
@@ -71,7 +71,7 @@
                                 <input type="number" placeholder="Enter product Id" name="pid"><br>
                                 <label>New Stock :</label>
                                 <input type="number" placeholder="Enter Quantity" name="stock"><br><br>
-                                <button type="button" class="btn btn-info">Update</button>
+                                <button type="submit" class="btn btn-info">Update</button>
                             </form>
                         </div>
                     </div>
